// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`madness should change target 1`] = `
"*asperiores* использовал _Безумие_ на *ratione*
\\[ 📖80 ]
*ratione* рубанул *ratione* _Оружием_ и нанёс *7.2* урона
\\[ ratione 💥 💔-7.2/0.8 📖0 ]
_Безумие_ *asperiores*"
`;

exports[`madness should handle multiple casters 1`] = `
"*asperiores* использовал _Безумие_ на *ratione*
\\[ 📖80 ]
*alias* использовал _Безумие_ на *ratione*
\\[ 📖80 ]
*ratione* рубанул *ratione* _Оружием_ и нанёс *7.2* урона
\\[ ratione 💥 💔-7.2/0.8 📖0 ]
_Безумие_ *asperiores*
_Безумие_ *alias*"
`;
